# docs/swagger.json
@@ -1882,6 +1882,9 @@
                 "action": {
                     "type": "string"
                 },
+                "admin_user": {
+                    "$ref": "#/definitions/controller.AdminReferenceResponse"
+                },
                 "admin_user_id": {
                     "type": "integer"
                 },
@@ -1896,6 +1899,9 @@
                 },
                 "reason": {
                     "type": "string"
+                },
+                "target": {
+                    "$ref": "#/definitions/controller.AdminTargetReferenceResponse"
                 },
                 "target_id": {
                     "type": "integer"
@@ -1922,6 +1928,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "organizer": {
+                    "$ref": "#/definitions/controller.AdminReferenceResponse"
                 },
                 "organizer_id": {
                     "type": "integer"
@@ -2061,6 +2070,17 @@
                 }
             }
         },
+        "controller.AdminReferenceResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "controller.AdminSectionResponse": {
             "type": "object",
             "properties": {
@@ -2098,6 +2118,20 @@
                     "type": "integer"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.AdminTargetReferenceResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
